starting to work

--- a/elm/Makefile
+++ b/elm/Makefile
@@ -1,8 +1,10 @@
+JS = elm.js
+
 live:
-	elm-live --port 8001 src/Main.elm -- --output=index.js
+	elm-live --port 8001 src/Main.elm -- --output=$(JS)
 
 clean:
-	rm -f index.js
+	rm -f $(JS)
 
 js: clean
-	elm make --output=index.js src/Main.elm
+	elm make --output=$(JS) src/Main.elm
